<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>yiqi.lu</groupId>
    <artifactId>leetcodeandlintcode</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <scala.version>2.13.5</scala.version>
    </properties>

    <build>
        <sourceDirectory>src/main</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>4.5.3</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <scalaVersion>${scala.version}</scalaVersion>
                    <compilerPlugins>
                        <compilerPlugin>
                            <groupId>org.typelevel</groupId>
                            <artifactId>kind-projector_2.13.6</artifactId>
                            <version>0.13.2</version>
                        </compilerPlugin>
                    </compilerPlugins>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.typelevel</groupId>
            <artifactId>cats-core_2.13</artifactId>
            <version>2.6.1</version>
        </dependency>
    </dependencies>
</project>